[package]
name = "paisho"
version = "0.1.0"
authors = ["nirmal <nirmalvettiankal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.13.0"
chess = { "git" = "https://github.com/jordanbray/chess/" }
